Alterações visando performance.